--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
       lazy: true
       provider: app_user_provider
       logout:
-        path: logout
+        path: deconnexion
         # where to redirect after logout
         # target: app_any_route
 
