--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "easycorp/easyadmin-bundle": "^4.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
+        "swiftmailer/swiftmailer": "^6.1",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
         "symfony/console": "6.4.*",
@@ -42,8 +44,7 @@
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.6|^3.0",
-        "swiftmailer/swiftmailer": "^6.1"
+        "twig/twig": "^2.6|^3.0"
     },
     "config": {
         "allow-plugins": {
