--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "stof/doctrine-extensions-bundle": "^1.11",
+        "stripe/stripe-php": "^13.17",
         "swiftmailer/swiftmailer": "^6.1",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
