--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.17",
         "easycorp/easyadmin-bundle": "^4.9",
         "fakerphp/faker": "^1.23",
+        "knplabs/knp-paginator-bundle": "^6.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "stof/doctrine-extensions-bundle": "^1.11",
