--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,7 +3,7 @@ security:
   enable_authenticator_manager: true
   password_hashers:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
-    App\Entity\User: 'auto'
+    App\Entity\User: "auto"
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
     # used to reload user from session & other features (e.g. switch_user)
@@ -23,7 +23,7 @@ security:
         path: deconnexion
         # where to redirect after logout
         # target: app_any_route
-
+      user_checker: App\Security\UserChecker
       remember_me:
         secret: "%kernel.secret%"
         lifetime: 604800
@@ -40,9 +40,9 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the first access control that matches will be used
   access_control:
-     - { path: ^/admin, roles: ROLE_ADMIN }
-     - { path: ^/compte, roles: ROLE_USER }
-     - { path: ^/commande, roles: ROLE_USER }
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/compte, roles: ROLE_USER }
+    - { path: ^/commande, roles: ROLE_USER }
 
 when@test:
   security:
