--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
 ###> symfony/framework-bundle ###
-/migrations/*
-!/migrations/.gitignore
-/.env
+###/migrations/*
+###!/migrations/.gitignore
+###/.env
 /.env.local
 /.env.local.php
 /.env.*.local
